# adventofcode24

./: .gitignore  pyproject.toml
2024_python/day02/: p1.py  p2.py
2024_python/day03/: p1.py  p2.py
2024_python/day04/: p1.py  p2.py
2024_python/day05/: p1.py  p2.py
2024_python/day06/: p1.py  p2.py
2024_python/day07/: __main__.py  p1.py  p2.py
2024_python/day08/: p1.py  p2.py
2024_python/day09/: p1.py  p2.py
